--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "src/llvm-project"]
 	path = src/llvm-project
-	url = https://github.com/llvm/llvm-project.git
+	url = https://github.com/TUM-DSE/llvm-memsafe-wasm.git
 [submodule "src/wasi-libc"]
 	path = src/wasi-libc
 	url = https://github.com/martin-fink/wasi-libc
